# for display continuity sake please use 2 spaces instead of tabs

2013-08-12 mmichaud <michael.michaud@free.fr>
  * Fix a bug in SpatiaQueryPlugIn where mask layer was not
    initialized.

2013-08-11 mmichaud <michael.michaud@free.fr>
  * Fix a bug in GeometryFunctionPlugIn where mask layer was not
    initialized.

2013-08-07 sstein <sstein@geo.uzh.ch>
  * New OpenStreetMap *.osm file reader added to OpenJUMP PLUS.
  
2013-07-29 mmichaud <michael.michaud@free.fr>
  * Make AutoAssignAttributePlugIn undoable

2013-07-14 mmichaud <michael.michaud@free.fr>
  * Bug 295 and 326 : better error handling in xml2java and in
    OpenProjectWizard so that a project file ca be completely parsed
    even if a third party class needed to read a datasource is not
    found. It is now possible
    - to save a csv file in a project file (jmp)
    - to read it back from the project
    - to read other layers if csv driver is missing

2013-07-13 mmichaud <michael.michaud@free.fr>
  * Replace HashMap by LinkedHashMap in FeatureDataset#removeAll
    so that feature order is preserved after feature deletion.

2013-07-10 mmichaud <michael.michaud@free.fr>
  * Replace HashMap by LinkedHashMap in EditTransaction so that
    feature order is preserved as much as possible after transactions
    like delete feature.

2013-06-28 mmichaud <michael.michaud@free.fr>
  * add relate (DE-9IM) operator in Simple Query PlugIn
    (and improve syntax error handling for operators having arguments)

2013-06-19 mmichaud <michael.michaud@free.fr>
  * add 4 wms addresses in the WMS URL chooser

2013-06-17 mmichaud <michael.michaud@free.fr>
  * Add 3 functions from JTS in Tools > Analysis > GeometryFunction :
    - MinimumBoundingCircle
    - MinimumDiameter
    - MinimumBoundingRectangle

2013-06-15 mmichaud <michael.michaud@free.fr>
  * ScaleBar is now Task dependent (as in SkyJUMP, but it cannot display
    non-meter units yet)

2013-06-09 mmichaud <michael.michaud@free.fr>