@@ -693,6 +693,7 @@ org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.empty = empty
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.line = line
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.point = point
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.mixed = mixed
+org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.explode-geometry-collections-recursively = explode geometry collections recursively
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.DataSource-Class = DataSource Class
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Geometry-Type = Geometry Type
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Info = Info
