@@ -687,6 +687,7 @@ org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.empty = leer
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.line = Linie
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.point = Punkt
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.mixed = Gemischt
+org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.explode-geometry-collections-recursively = Zerlege Geometrie-Sammlungen (rekursiv)
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.DataSource-Class = Datensatz Klasse
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Geometry-Type = Geometrie-Typ
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Info = Information
