@@ -690,6 +690,7 @@ org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.empty = vac\u00EDas
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.line = linea
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.point = punto
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.mixed = \#T\:mixed
+org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.explode-geometry-collections-recursively = \#T\:explode geometry collections recursively
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.DataSource-Class = DataSource Clase
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Geometry-Type = Tipo de geometria
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Info = Info
