@@ -685,6 +685,7 @@ org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.empty = tyhj\u00E4t
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.line = viiva
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.point = piste
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.mixed = \#T\:mixed
+org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.explode-geometry-collections-recursively = \#T\:explode geometry collections recursively
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.DataSource-Class = Aineiston luokka
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Geometry-Type = Geometriatyyppi
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Info = Tietoja
