@@ -686,6 +686,7 @@ org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.empty = vide
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.line = ligne
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.point = point
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.mixed = \#T\:mixed
+org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.explode-geometry-collections-recursively = \#T\:explode geometry collections recursively
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.DataSource-Class = Type de donn\u00E9e
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Geometry-Type = Type de g\u00E9om\u00E9trie
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Info = Info
