@@ -686,6 +686,7 @@ org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.empty = \u00DCres
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.line = vonal
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.point = pont
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.mixed = \#T\:mixed
+org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.explode-geometry-collections-recursively = \#T\:explode geometry collections recursively
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.DataSource-Class = Adatforr\u00E1s oszt\u00E1lya
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Geometry-Type = Geometria t\u00EDpusa
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Info = Info
