@@ -690,6 +690,7 @@ org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.empty = vuote
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.line = Linea
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.point = Punto
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.mixed = \#T\:mixed
+org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.explode-geometry-collections-recursively = \#T\:explode geometry collections recursively
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.DataSource-Class = Classe Dati di origine
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Geometry-Type = Tipo Geometria
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Info = Informazione
