@@ -872,6 +872,7 @@ org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.empty = \#T\:empty
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.line = \#T\:line
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.point = \#T\:point
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.mixed = \#T\:mixed
+org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.explode-geometry-collections-recursively = \#T\:explode geometry collections recursively
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.DataSource-Class = \#T\:DataSource Class
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Geometry-Type = \#T\:Geometry Type
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Info = \#T\:Info
