@@ -38,7 +38,8 @@ import java.util.Iterator;
 import java.util.List;
 
 import javax.swing.ImageIcon;
-import javax.swing.JPopupMenu;
+
+import org.openjump.core.ui.plugin.AbstractThreadedUiPlugIn;
 
 import com.vividsolutions.jts.geom.Geometry;
 import com.vividsolutions.jts.geom.GeometryCollection;
@@ -54,15 +55,17 @@ import com.vividsolutions.jump.feature.Feature;
 import com.vividsolutions.jump.feature.FeatureCollection;
 import com.vividsolutions.jump.feature.FeatureDataset;
 import com.vividsolutions.jump.feature.FeatureSchema;
+import com.vividsolutions.jump.task.TaskMonitor;
 import com.vividsolutions.jump.workbench.WorkbenchContext;
 import com.vividsolutions.jump.workbench.model.Layer;
-import com.vividsolutions.jump.workbench.model.LayerManager;
 import com.vividsolutions.jump.workbench.model.StandardCategoryNames;
-import com.vividsolutions.jump.workbench.plugin.AbstractPlugIn;
 import com.vividsolutions.jump.workbench.plugin.EnableCheckFactory;
 import com.vividsolutions.jump.workbench.plugin.MultiEnableCheck;
 import com.vividsolutions.jump.workbench.plugin.PlugInContext;
+import com.vividsolutions.jump.workbench.ui.GUIUtil;
+import com.vividsolutions.jump.workbench.ui.GenericNames;
 import com.vividsolutions.jump.workbench.ui.MenuNames;
+import com.vividsolutions.jump.workbench.ui.MultiInputDialog;
 import com.vividsolutions.jump.workbench.ui.images.IconLoader;
 import com.vividsolutions.jump.workbench.ui.plugin.FeatureInstaller;
 
@@ -85,7 +88,7 @@ import com.vividsolutions.jump.workbench.ui.plugin.FeatureInstaller;
  * their dimension</li>
  * </ul>
  */
-public class ExtractLayersByGeometry extends AbstractPlugIn {
+public class ExtractLayersByGeometry extends AbstractThreadedUiPlugIn {
 
   private final static String EXTRACT_LAYERS_BY_GEOMETRY_TYPE = I18N
       .get("org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.Extract-Layers-by-Geometry-Type");
@@ -99,7 +102,15 @@ public class ExtractLayersByGeometry extends AbstractPlugIn {
       .get("org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.line");
   private final static String AREA = I18N
       .get("org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.area");
-
+  private final static String MIXED = I18N
+	      .get("org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.mixed");
+  private final static String sExplodeGeoms = I18N
+	      .get("org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.explode-geometry-collections-recursively");
+  private final static String LAYER1 = GenericNames.SELECT_LAYER;
+  
+  public boolean doExplodeGeometryCollections = true;
+  public Layer layer1 = null;
+  
   public ExtractLayersByGeometry() {
 
   }
@@ -134,32 +145,58 @@ public class ExtractLayersByGeometry extends AbstractPlugIn {
   }
 
   public boolean execute(PlugInContext context) throws Exception {
-    Layer[] layers = context.getWorkbenchContext().getLayerNamePanel()
-        .getSelectedLayers();
-    if (layers.length > 0) {
-      Layer layer = layers[0];
-      if (!compatibleFeatures(layer))
-        splitLayer(context, layer);
-      else
-        context.getWorkbenchFrame().warnUser(ONLY_ONE_GEOMETRY_TYPE_FOUND);
-      return true;
-    } else
-      return false;
+		MultiInputDialog dialog = new MultiInputDialog(context
+				.getWorkbenchFrame(), getName(), true);
+		if(layer1 == null){
+			layer1 = context.getCandidateLayer(0);
+		}
+		setDialogValues(dialog, context);
+		GUIUtil.centreOnWindow(dialog);
+		dialog.setVisible(true);
+		if (!dialog.wasOKPressed()) {
+			return false;
+		}
+		getDialogValues(dialog);
+		return true;
   }
 
+  @Override
+  public void run(TaskMonitor monitor, PlugInContext context) throws Exception {
+		monitor.allowCancellationRequests();
+	    if (layer1 != null) {
+	    	if (!compatibleFeatures(layer1))
+	    		splitLayer(monitor, context, layer1, this.doExplodeGeometryCollections);
+	    	else{
+	    		context.getWorkbenchFrame().warnUser(ONLY_ONE_GEOMETRY_TYPE_FOUND);
+	    	}
+	    }
+  }
+  
   public String getName() {
-    return EXTRACT_LAYERS_BY_GEOMETRY_TYPE;
+    return EXTRACT_LAYERS_BY_GEOMETRY_TYPE + "...";
   }
 
   public static final ImageIcon ICON = IconLoader.icon("extract.gif");
 
-  private List splitLayer(PlugInContext context, Layer layer) {
+  private void setDialogValues(MultiInputDialog dialog, PlugInContext context) {
+	  dialog.setSideBarDescription(EXTRACT_LAYERS_BY_GEOMETRY_TYPE);
+	  dialog.addLayerComboBox(LAYER1, layer1, context.getLayerManager());
+	  dialog.addCheckBox(sExplodeGeoms, doExplodeGeometryCollections);
+  }
+
+  private void getDialogValues(MultiInputDialog dialog) {
+	  this.layer1 = dialog.getLayer(LAYER1);
+	  this.doExplodeGeometryCollections = dialog.getBoolean(sExplodeGeoms);
+  }
+
+  private List splitLayer(TaskMonitor monitor, PlugInContext context, Layer layer, boolean doExplodeGeoms) {
     ArrayList newLayers = new ArrayList();
 
     ArrayList emptyFeatures = new ArrayList();
     ArrayList pointFeatures = new ArrayList();
     ArrayList lineFeatures = new ArrayList();
     ArrayList polyFeatures = new ArrayList();
+    ArrayList mixedFeatures = new ArrayList();
 
     FeatureCollection featureCollection = layer.getFeatureCollectionWrapper();
     List featureList = featureCollection.getFeatures();
@@ -169,13 +206,27 @@ public class ExtractLayersByGeometry extends AbstractPlugIn {
         .getSelectedCategories();
 
     for (Iterator i = featureList.iterator(); i.hasNext();) {
+      if(monitor.isCancelRequested()){
+    	  break;
+      }
       Feature feature = (Feature) i.next();
       Geometry geo = feature.getGeometry();
       BitSet currFeatureBit = new BitSet();
       currFeatureBit = setBit(currFeatureBit, geo);
       if (geo instanceof GeometryCollection) {
-        explodeGeometryCollection(featureSchema, emptyFeatures, pointFeatures,
-            lineFeatures, polyFeatures, (GeometryCollection) geo, feature);
+    	  if(doExplodeGeoms == true){
+		        explodeGeometryCollection(featureSchema, emptyFeatures, pointFeatures,
+		            lineFeatures, polyFeatures, (GeometryCollection) geo, feature);
+    	  }
+    	  else{
+    		  GeometryCollection geomcoll = (GeometryCollection)geo;
+    		  if (geomcoll.isEmpty() == true){
+    			  emptyFeatures.add(feature.clone(true)); 
+    		  }
+    		  else{
+    			  mixedFeatures.add(feature.clone(true)); 
+    		  }
+    	  }
       } else if (currFeatureBit.get(pointBit)) {
         pointFeatures.add(feature.clone(true));
       } else if (currFeatureBit.get(lineBit)) {
@@ -232,6 +283,18 @@ public class ExtractLayersByGeometry extends AbstractPlugIn {
       newLayers.add(polyLayer);
       polyFeatureCollection.addAll(polyFeatures);
     }
+    
+    if (mixedFeatures.size() > 0) {
+        Layer mixedLayer = context.addLayer(
+            selectedCategories.isEmpty() ? StandardCategoryNames.RESULT
+                : selectedCategories.iterator().next().toString(),
+            layer.getName() + "_" + MIXED, new FeatureDataset(featureSchema));
+        mixedLayer.setStyles(layer.cloneStyles());
+        FeatureCollection mixedFeatureCollection = mixedLayer
+            .getFeatureCollectionWrapper();
+        newLayers.add(mixedLayer);
+        mixedFeatureCollection.addAll(mixedFeatures);
+      }
     context.getLayerViewPanel().repaint();
     return newLayers;
   }
@@ -254,7 +317,7 @@ public class ExtractLayersByGeometry extends AbstractPlugIn {
 
         if (geometry instanceof GeometryCollection) {
           explodeGeometryCollection(fs, emptyFeatures, pointFeatures,
-              lineFeatures, polyFeatures, (GeometryCollection) geometry,
+              lineFeatures, polyFeatures,(GeometryCollection) geometry,
               feature);
         } else {
           Feature newFeature = feature.clone(false);
